# cosmic-applet-launch-control

./: Cargo.toml  justfile
res/: com.example.CosmicAppletTemplate.desktop  com.example.CosmicAppletTemplate.metainfo.xml
src/: app.rs  device_listener.rs  launch.rs  main.rs
src/core/: launch.rs  mod.rs
