[package]
name = "cosmic-applet-launch-control"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
rust-version = "1.80"

[dependencies]
i18n-embed-fl = "0.8"
open = "5.1.3"
rust-embed = "8.3.0"
hidapi = { version = "1.5.0", default-features = false, features = ["linux-shared-hidraw"] }
system76_ectool = "0.3.8"
thiserror = "2.0.16"
strum = { version = "0.27", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
tokio-udev = "0.9.1"

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
default-features = false
features = ["applet", "tokio", "wayland"]

[dependencies.i18n-embed]
version = "0.14"
features = ["fluent-system", "desktop-requester"]

# Uncomment to test a locally-cloned libcosmic
# [patch.'https://github.com/pop-os/libcosmic']
# libcosmic = { path = "../libcosmic" }
# cosmic-config = { path = "../libcosmic/cosmic-config" }
# cosmic-theme = { path = "../libcosmic/cosmic-theme" }
